[package]
name = "eventually"
description = "Eventually is a minimalistic crate that exposes a few building blocks to build Event-sourced applications in Rust."
version = "0.5.0"
edition = "2021"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/get-eventually/eventually-rs"

categories = [
    "rust-patterns",
    "web-programming",
    "asynchronous",
    "data-structures",
]
keywords = ["architecture", "ddd", "event-sourcing", "cqrs", "es"]

[features]
default = []
tracing = ["dep:tracing"]
serde-prost = ["dep:prost"]
serde-json = ["dep:serde_json"]
full = ["serde-prost", "serde-json", "tracing"]

[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.80"
futures = "0.3.30"
thiserror = "1.0.60"
prost = { version = "0.12.4", optional = true }
serde_json = { version = "1.0.117", optional = true }
serde = { version = "1.0.201", features = ["derive"] }
tracing = { version = "0.1.40", features = ["async-await"], optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
